# cppvulkan

./: .gitmodules  CMakeLists.txt  README.md  compileshaders.bat  flake.nix
source/: main.cc
source/shaders/: shader.frag
